syntax = "proto3"

import "events.proto"

service TalariaService {
    rpc GetTalariaEvent(events.EventRequest) returns (events.Event);
    rpc GetTalariaEvents(events.EventsRequest) returns (stream events.Event);
}
